tests/fixtures/positive/style/ClassOrdering.kt
package style

class MyClass {
    fun doSomething() {
        println("hello")
    }

    val name: String = "test"
}
